<resources>
    <string name="app_name">Concentro Shook</string>
    <string name="app_description">You should allow My Application to lock the screen!</string>
    <string name="action_settings">Settings</string>
    <string name="content_description">description</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <!-- Button Names -->
    <!-- Fragment Button Names -->
    <string name="pomodoro">Pomodoro Technique</string>
    <string name="overdrive">Overdrive</string>
    <string name="next">Next</string>
    <string name="about">About</string>
    <string name="back">Back</string>
    <string name="previous">Previous</string>
    <string name="block">BLock</string>
    <string name="unblock">UnbLock</string>

    <!-- MainActivity Button Names -->
    <string name="lock">Lock</string>
    <string name="enable">Enable</string>
    <string name="disable">Start</string>
    <string name="durationSpinner">Select Time</string>

    <!-- Text -->
    <string name="modes">Modes:</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>



    <!-- Strings used by the sample DeviceAdminReceiver -->
    <string name="admin_receiver_status">Sample Device Admin: %1$s</string>
    <string name="admin_receiver_status_enabled">enabled</string>
    <string name="admin_receiver_status_disabled">disabled</string>
    <string name="admin_receiver_status_pw_changed">pw changed</string>
    <string name="admin_receiver_status_pw_failed">pw failed</string>
    <string name="admin_receiver_status_pw_succeeded">pw succeeded</string>
    <string name="admin_receiver_status_disable_warning">
        This is an optional message to warn the user about disabling.</string>
</resources>